--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "browser-sync": "^2.24.5",
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -20,6 +21,7 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify-es": "^1.0.1",
+    "moment": "^2.22.2",
     "rollup-plugin-babel": "^3.0.4"
   },
   "scripts": {
