--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-better-rollup": "^3.1.0",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-sourcemaps": "^2.6.4",
